@@ -20,6 +20,8 @@
        searches.
 *   v: refine query.
 
+* Tab: Grabs the first match in tag and search completion.
+
 == v0.1 / 2014-11-30
 
 First release of Astroid!
